# OCCT

./: AdvancingFront.cpp  AdvancingFront.h  BUILD.md  CMakeLists.txt  CMakeLists_Curve2DTo3D.txt  CMakeLists_examples.txt  CMakeLists_face_separator.txt  CMakeLists_multi_loop.txt  CMakeLists_wire_example.txt  Edge.h  Geom2dAdaptor_Curve_Parameters.cpp  Geom2dAdaptor_Curve_Parameters_Summary.md  MultiLoopWireBuilder.cpp  MultiLoopWireBuilder.h  PROJECT_SUMMARY.md  Point2D.h  README.md  README_face_separator.md  README_wire_example.md  Triangle.h  USAGE_GUIDE.md  WavefrontMeshGenerator.cpp  WavefrontMeshGenerator.h  advanced_edge_to_wire.cpp  advancing_front_demo_direct  analyze_faces.py  complete_face_separator.cxx  current_time_example  current_time_example.cpp  edge_sorting_utility.cpp  edge_to_wire_example.cpp  face_separator.cxx  face_separator.hxx  face_separator_example.cxx  face_separator_impl.cxx  get_mat_node_geometry.cpp  get_milliseconds  get_milliseconds.cpp  main.cpp  millisecond_time  (+18 more)
docs/: Curve2DTo3DConverter_README.md
examples/: Curve2DTo3DExample.cpp
src/: CMakeLists_OCCT.txt  CMakeLists_OCCT_Simple.txt  CMakeLists_PointOnLine.txt  Makefile  Makefile_OCCT  OCCTMinimal  OCCTMinimal.cpp  OCCTPointOnLine.cpp  OCCTSimple.cpp  PointOnLineParam  PointOnLineParam.cpp  README_OCCT_Implementation.md  README_PointOnLine.md  SimplePointOnLine  SimplePointOnLine.cpp  point_on_line.py
src/ModelingData/: Curve2DTo3DConverter.cxx  Curve2DTo3DConverter.h
tbb_file_io_example/: CMakeLists.txt  parallel_csv_processor.cpp  parallel_file_processor.cpp  parallel_file_reader.cpp  parallel_file_writer.cpp  performance_test.cpp  simple_tbb_test.cpp  tbb_file_io_example.cpp
